--- a/index.html
+++ b/index.html
@@ -182,11 +182,11 @@
         <div class="card">
             <h3>⚙️ Pengaturan Turnamen</h3>
             <div class="grid">
-                <input id="groups" type="number" value="3" placeholder="Jumlah Grup">
-                <input id="teams" type="number" value="4" placeholder="Tim per Grup">
-                <input id="startHour" type="time" value="08:00" placeholder="Jam Mulai">
-                <input id="endHour" type="time" value="17:00" placeholder="Jam Selesai">
-                <input id="duration" type="number" value="60" placeholder="Durasi (menit)">
+                <input id="groups" type="number" value="" placeholder="Jumlah Grup">
+                <input id="teams" type="number" value="" placeholder="Tim per Grup">
+                <input id="startHour" type="time" value="" placeholder="Jam Mulai">
+                <input id="endHour" type="time" value="" placeholder="Jam Selesai">
+                <input id="duration" type="number" value="" placeholder="Durasi (menit)">
             </div>
             <button onclick="generate()">🚀 Buat Jadwal</button>
         </div>
